# paper2epub

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup_dependencies.sh
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/: advanced_usage.py  basic_usage.py  batch_convert.py  test_converter.py
paper2epub/: __init__.py  cli.py  config.py  converter.py  figure_extractor.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_figure_extractor.py  test_integration.py  test_utils.py
